# chess-engine

./: CMakeLists.txt
src/: board.cpp  board.h  evaluate.cpp  evaluate.h  generate_magics.cpp  magics.cpp  magics.h  main.cpp  masks.cpp  masks.h  move.cpp  search.cpp  search.h
